[package]
name = "kxos-frame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
x86_64 = "0.14.2"
spin = "0.9.4"
volatile = {version="0.4.5", features = ["unstable"] }
buddy_system_allocator = "0.6"
linked_list_allocator = "0.9.0"
bootloader = {version="0.10.12"}
font8x8 = { version = "0.2.5", default-features = false, features = ["unicode"]}
uart_16550 = "0.2.0"


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]


[features]
default = ["serial_print"]
serial_print = []

