[package]
name = "kxos-pci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
spin = "0.9.4"
kxos-frame = {path = "../kxos-frame"}
kxos-util = {path="../kxos-util"}
kxos-frame-pod-derive= {path="../kxos-frame-pod-derive"}

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[features]

