[package]
name = "kxos-std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kxos-frame = {path = "../kxos-frame"}
kxos-frame-pod-derive = {path = "../kxos-frame-pod-derive"}
kxos-pci = {path="../kxos-pci"}
kxos-virtio = {path="../kxos-virtio"}
kxos-typeflags = {path="../kxos-typeflags"}
kxos-typeflags-util = {path="../kxos-typeflags-util"}
kxos-rights-proc = {path="../kxos-rights-proc"}

# parse elf file
xmas-elf = "0.8.0"
# goblin = {version= "0.5.3", default-features = false, features = ["elf64"]}
# data-structures
bitflags = "1.3"
ringbuffer = "0.10.0"

spin = "0.9.4"
vte = "0.10"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
