[package]
name = "kxos-virtio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
spin = "0.9.4"
kxos-frame = {path = "../kxos-frame"}
kxos-pci = {path="../kxos-pci"}
kxos-util = {path="../kxos-util"}
kxos-frame-pod-derive = {path = "../kxos-frame-pod-derive"}


[features]

