[workspace]
resolver = "2"
members = [
    "common/framework", "common/test_macro",
    "tests/*",
]

[workspace.package]
version = "0.1.0"
repository = "https://github.com/asterinas/asterinas"
license = "MPL-2.0"
edition = "2024"

[workspace.dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
inventory = "0.3"
rexpect = "0.6"
strip-ansi-escapes = "0.2"
uuid = { version = "1.18", features = ["v4"] }
nixos-test-framework = { path = "common/framework" }
nixos-test-macro = { path = "common/test_macro" }

[workspace.lints.clippy]
allow_attributes = "warn"
