[package]
name = "sctrace"
version = "0.17.0"
edition = "2024"
description = "Syscall Compatibility Tracer (sctrace) that analyzes and validates system call against System Call Matching Language (SCML)"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/asterinas/asterinas"

[lib]
name = "sctrace"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
regex = "1.11.2"
nom = "7"
nix = { version = "0.27", features = ["process"] }
