[package]
name = "aster-block"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
align_ext.workspace = true
aster-util.workspace = true
bitvec.workspace = true
component.workspace = true
device-id.workspace = true
id-alloc.workspace = true
int-to-c-enum.workspace = true
log.workspace = true
ostd.workspace = true
spin.workspace = true

[lints]
workspace = true
