[package]
name = "aster-cmdline"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
component.workspace = true
log.workspace = true
ostd.workspace = true
spin.workspace = true
inventory = { git = "https://github.com/asterinas/inventory", rev = "9dce587" }

[lints]
workspace = true
