[package]
name = "aster-console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.4"
ostd = { path = "../../../ostd" }
component = { path = "../../libs/comp-sys/component" }

[lints]
workspace = true
