[package]
name = "aster-console"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
component.workspace = true
font8x8.workspace = true
int-to-c-enum.workspace = true
ostd.workspace = true
spin.workspace = true

[lints]
workspace = true
