[package]
name = "aster-device-mapper"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aster-block.workspace = true
aster-cmdline.workspace = true
component.workspace = true
device-id.workspace = true
io-util.workspace = true
ostd.workspace = true
spin.workspace = true

[lints]
workspace = true
