[package]
name = "aster-drm"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aster-time.workspace = true
aster-framebuffer.workspace = true
bitflags.workspace = true
component.workspace = true
hashbrown.workspace = true
int-to-c-enum.workspace = true
log.workspace = true
ostd.workspace = true
ostd-pod.workspace = true
spin.workspace = true
zerocopy.workspace = true

[lints]
workspace = true
