[package]
name = "aster-framebuffer"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aster-console.workspace = true
aster-input.workspace = true
component.workspace = true
log.workspace = true
ostd.workspace = true
spin.workspace = true

[lints]
workspace = true
