[package]
name = "aster-input"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.4"
log = "0.4"
ostd = { path = "../../../ostd" }
component = { path = "../../libs/comp-sys/component" }
bitvec = { version = "1.0", default-features = false, features = ["alloc"] }
bitflags = "1.3"

[lints]
workspace = true
