[package]
name = "aster-logger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
component = { path = "../../libs/comp-sys/component" }
aster-console = { path = "../console" }
log = "0.4"
ostd = { path = "../../../ostd" }
owo-colors = { version = "3", optional = true }

[features]
default = ["log_color"]
log_color = ["dep:owo-colors"]

[lints]
workspace = true
