[package]
name = "aster-logger"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aster-cmdline.workspace = true
aster-console.workspace = true
component.workspace = true
ostd.workspace = true
owo-colors = { workspace = true, optional = true }
spin.workspace = true

[features]
default = ["log_color"]
log_color = ["dep:owo-colors"]

[lints]
workspace = true
