[package]
name = "aster-mlsdisk"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm.workspace = true
aster-block.workspace = true
bittle.workspace = true
component.workspace = true
ctr.workspace = true
device-id.workspace = true
hashbrown.workspace = true
inherit-methods-macro.workspace = true
lending-iterator.workspace = true
lru.workspace = true
log.workspace = true
ostd.workspace = true
postcard.workspace = true
serde.workspace = true

[lints]
workspace = true
