[package]
name = "aster-mouse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aster-input = { path = "../input" }
aster-time = { path = "../time" }
component = { path = "../../libs/comp-sys/component" }
ostd = { path = "../../../ostd" }
log = "0.4"
spin = "0.9.4"

[features]
